@@ -581,7 +581,7 @@ void Usecode_internal::show_npc_face
 		}
 	if (!conv->get_num_faces_on_screen())
 		gwin->get_effects()->remove_text_effects();
-	// Only non persitent
+	// Only non persistent
 	if (gwin->get_gump_man()->showing_gumps(true))
 		{
 		gwin->get_gump_man()->close_all_gumps();
@@ -2211,6 +2211,8 @@ int Usecode_internal::run()
 				// Get array to loop over.
 				Usecode_value& arr = frame->locals[local4];
 
+				int next = frame->locals[local1].get_int_value();
+
 				if (initializing_loop)
 				{	// Initialize loop.
 					initializing_loop = false;
@@ -2218,8 +2220,51 @@ int Usecode_internal::run()
 						arr.get_array_size() : 1;
 					frame->locals[local2] = Usecode_value(cnt);
 					frame->locals[local1] = Usecode_value(0);
+
+					next = 0;
 				}
-				int next = frame->locals[local1].get_int_value();
+				else if (GAME_SI)
+				{
+					// in SI, the loop-array can be modified in-loop, it seems
+					// (conv. with Spektran, 044D:00BE)
+				   
+					// so, check for changes of the array size, and adjust
+					// total count and next value accordingly.
+
+					int cnt = arr.is_array() ? arr.get_array_size() : 1;
+
+					// only support changes of size 1, for now
+					if (abs(cnt - frame->locals[local2].get_int_value()) > 1) {
+						std::cerr << "Error: internal usecode interpreter "
+								  << "error (loop array changed). Please "
+								  << "report this bug." << std::endl;
+						assert(abs(cnt - frame->locals[local2].get_int_value()) <= 1);
+					}
+
+					if (cnt != frame->locals[local2].get_int_value()) {
+
+						// update new total count
+						frame->locals[local2] = Usecode_value(cnt);
+
+						Usecode_value& curval = arr.is_array() ?
+							arr.get_elem(next - 1) : arr;
+						
+						if (curval != frame->locals[local3]) {
+							if (cnt > frame->locals[local2].get_int_value()) {
+								// array got bigger, it seems
+								// addition occured before the current value
+								next++;
+							} else {
+								// array got smaller
+								// deletion occured before the current value
+								next--;
+							}
+						} else {
+							// addition/deletion was after the current value
+							// so don't need to update 'next'
+						}
+					}
+				}
 
 				// End of loop?
 				if (next >= frame->locals[local2].get_int_value()) {
